fixed alignment issues

--- a/main/static/main/main.css
+++ b/main/static/main/main.css
@@ -53,12 +53,11 @@ body {
   
   
   #storefront {
-    display: grid;
-    grid-template-columns: repeat(4, .75fr);
-    grid-auto-rows: 200px;
-    grid-gap: 20px;
-    padding: 0px 0px 0px 10px;
-
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
   }
   
   #storefront a {
@@ -66,23 +65,30 @@ body {
     text-decoration: none;
   }
 
-  img {
+  #storefront .activity img {
     width: 100%;
-    height: auto;
+    height: 200px;
+    display: block;
   }
 
-  .activity {
+  #storefront .activity {
+    width: 300px;
+    height: 400px;
+    margin: 20px;
+    text-align: left;
     background-color: rgb(250, 250, 250);
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    
-    
+  }
+  #storefront .activity .title {
+    font-size: 1.5em;
+    margin: 10px 0;
   }
 
   .cost {
     color: green;
-    font-size: 20px;
-    margin: 2px;
+    font-size: 1.2em;
+    margin: 10px 0;
   }
 
   
